<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notification_switch"
        android:summaryOff="@string/notification_switch_off"
        android:summaryOn="@string/notification_switch_on"
        android:title="@string/notification_switch_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="bgsync_switch"
        android:title="@string/bgsync_switch_title" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="bgsync_freq_text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/bsync_freq_summary"
        android:title="@string/bgsync_freq_title"
        android:hint="seconds"/>
</PreferenceScreen>